force-app/main/default/objects/Order_Contact_Role__c/Order_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Order Contact Role</label>
    <nameField>
        <displayFormat>OCR-{00000000}</displayFormat>
        <label>Order Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>