force-app/main/default/objects/Order_Contact_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact is Inactive.</errorMessage>
        <filterItems>
            <field>Contact.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Contact Roles</relationshipLabel>
    <relationshipName>Order_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>