force-app/main/default/objects/Order_Contact_Role__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <formula>Contact__r.FirstName+&apos; &apos;+Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactName</label>
    <type>Text</type>
</CustomField>