force-app/main/default/objects/Order_Contact_Role__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>